2007-04-24  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/Makefile.am:
	* src/gconf-keys.cpp:
	* src/gconf-keys.h:
	* src/gnome-system-monitor.schemas.in:
	* src/procdialogs.cpp:
	* src/procman.cpp:
	* src/procman.h:
	* src/proctable.cpp:

	Added a configure switch for Irix/Solaris mode.
	Closes #410795.

2007-04-23  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	* ChangeLog:
	* configure.in:
	
	Released 2.19.1.

2007-04-23  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.cpp:
	* src/proctable.h:
	* src/util.h:
	
	Huge rewrite of the dependencies tree.
	It needs a lot of testing but it is definitely sanier than the
	previous code. I worked on it all the weekend and it is really
	to have a working and moving dependency tree.

2007-04-21  Benoît Dejean  <benoit@placenet.org>

	* src/util.cpp:
	* src/util.h:
	
	Better debug logging.

2007-04-19  Benoît Dejean  <benoit@placenet.org>

	* src/smooth_refresh.cpp:

	Removed duplicate ;;.
	1-byte patch by Bernard Leak  <bernard@brenda-arkle.demon.co.uk>.
	Closes #431181.

2007-04-19  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.cpp:

	Splitted code about ProcInfo updates and treestore updates.

	Avoid duplicated work in ProcInfo constructor : update_info
	already does everything needed.

	Added ProcInfo::ppid which will be soon used instead of
	ProcInfo::parent.

2007-04-13  Benoît Dejean  <benoit@placenet.org>

	* src/lsof.cpp:
	* src/prettytable.cpp:
	* src/procman.cpp:
	* src/procman.h:
	* src/proctable.cpp:
	* src/proctable.h:

	Replaced a ProcData::info and ProcData::pids by ProcInfo::all.
	This is currently a map. I'll turn it into a set soon.
	This saves a lot of code and make things simpler.
	The map has a nice property : it is sorted by pid so this helps a lot
	when looking for the parent node as ppid is nearly always < pid.
	May be this is just fortunate but it works.
	But orphaned processed still may get adpoted by a wrong parent...
	