@@ -1,3 +1,12 @@
+2007-04-25  Benoît Dejean  <benoit@placenet.org>
+
+	* src/memmaps.cpp:
+	
+	Implemented smaps.
+	Simplified implementation.
+	Uses a GtkWindow instead of a dialog because the treeview is now
+	much bigger.
+
 2007-04-24  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
